--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-bootstrap-icons": "^1.9.1",
     "react-dom": "18.2.0",
+    "react-multi-carousel": "^2.8.2",
     "typescript": "4.8.4"
   }
 }
