--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "bootstrap": "^5.2.2",
+    "cors": "^2.8.5",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
+    "nextjs-cors": "^2.1.2",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/nodemailer": "^6.4.6"
   }
 }
