--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
     "cors": "^2.8.5",
     "eslint": "8.27.0",
@@ -20,11 +21,13 @@
     "next": "13.0.2",
     "nextjs-cors": "^2.1.2",
     "nodemailer": "^6.8.0",
+    "phosphor-react": "^1.4.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-bootstrap-icons": "^1.9.1",
     "react-dom": "18.2.0",
     "react-multi-carousel": "^2.8.2",
+    "react-on-screen": "^2.1.1",
     "typescript": "4.8.4"
   },
   "devDependencies": {
